# django-account

./: pyproject.toml
call_center/: db.sqlite3
call_center/account/: const.py  models.py  serializers.py  urls.py  views.py
call_center/account/migrations/: 0001_initial.py  0002_alter_account_options_and_more.py  0003_account_has_set_password.py  0004_account_updated_at.py  0005_accountemailtoken.py  0006_alter_account_options_and_more.py  0007_rename_account_id_accountemailtoken_account.py  0008_remove_accountemailtoken_status.py  0009_accountemailtoken_status.py
call_center/authentication/: serializers.py  urls.py  views.py
call_center/call_center/: settings.py  urls.py
call_center/call_center/templates/: forgot-password.html
